2005-12-24  Ben Elliston  <bje@gnu.org>

	* doc/C/Makefile.am: Remove.
	* doc/C/Makefile.in: Likewise.

	* Makefile.am (SUBDIRS): Remove.
	(EXTRA_DIST): Append $(XML).
	(dist_man_MANS): Define.
	(info_TEXINFOS): Likewise.
	(XML): List XML source files.
	(dejagnu.pdf): New target.
	(dejagnu.ps): Likewise.
	(dejagnu.rtf): Likewise.
	(html): Likewise.
	(dejagnu.texi): Special rule to build Texinfo source.
	* Makefile.in: Regenerate.
	* configure.ac: Don't search for docbook2dvi.
	Search for docbook2rtf and docbook2pdf.
	Don't output doc/Makefile or doc/C/Makefile.
	* configure: Regenerate.
	* doc/texinfo.tex: Move from here ..
	* texinfo.tex: .. to here.
	* doc/Makefile.am: Remove.
	* doc/Makefile.in: Likewise.
	* doc/C/dejagnu.omf: Likewise.
	* doc/C/topic.dat: Likewise.
	* doc/C/dejagnu.xml: Move from here ..
	* doc/dejagnu.xml: .. to here.
	* doc/C/legal.xml: Move from here ..
	* doc/legal.xml: .. to here.
	* doc/C/ref.xml: Move from here ..
	* doc/ref.xml: .. to here.
	* doc/C/user.xml: Move from here ..
	* doc/user.xml: .. to here.
	* doc/dejagnu.texi: Rebuild from XML source.

2005-12-23  Ben Elliston  <bje@gnu.org>

	* doc/runtest.1: Update manual page.

2005-12-23  Ben Elliston  <bje@gnu.org>

	* doc/overview.sgml: Remove in favour of XML versions.
	* doc/ref.sgml: Ditto.
	* doc/user.sgml: Ditto.
	* doc/texinfo.tex: Import new version.

2005-12-20  Ben Elliston  <bje@gnu.org>

	* Makefile.am (SUBDIRS): Remove testsuite, example.
	(EXTRA_DIST): Add $(TESTSUITE_FILES).
	(TESTSUITE_FILES): New.
	(RUNTEST, RUNTESTDEFAULTFLAGS): New.
	(AM_CXXFLAGS): Set.
	(check_PROGRAMS): New.
	(unit_SOURCES): New.
	* Makefile.in: Regenerate.
	* configure.ac (AC_OUTPUT): Don't output example/Makefile,
	testsuite/Makefile or testsuite/libdejagnu/Makefile.
	* configure: Regenerate.
	* testsuite/Makefile.am: Remove.
	* testsuite/Makefile.in: Likewise.
	* testsuite/libdejagnu/Makefile.am: Likewise.
	* testsuite/libdejagnu/Makefile.in: Likewise.

2005-12-20  Ben Elliston  <bje@gnu.org>